--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ p, .content ul, .content ol{
     font-weight: 300;
 }
 .content h1:first-child{
-    font-size: 1.333em;
+    font-size: 1.666em;
     color: #034c8f;
     padding-top: 2.5em;
     text-transform: uppercase;
@@ -109,7 +109,7 @@ pre{
     box-sizing: border-box;
     background-color: #f4f5f8;
     overflow-x: hidden;
-    font-size: 18px;
+    font-size: 16px;
 }
 .left-menu .content-infos {
     position: relative;
@@ -152,7 +152,8 @@ pre{
 }
 .content-menu ul{
     list-style: none;
-    margin: 0;
+    margin: 0px;
+    margin-left: 10px;
     padding: 0;
     line-height: 28px;
 }
@@ -164,12 +165,19 @@ pre{
 }
 .content-menu ul li:hover,
 .content-menu ul li.active{
-    background-color:#DCDEE9;
+    background-color:#718EA4;
 }
+
+/*#496D89*/
 .content-menu ul li:hover a,
 .content-menu ul li.active a{
-    color: #00a8e3;
+    color: #042037;
 }
+
+.content-menu ul li.indent a{
+    text-indent: 20px;
+}
+
 @media (hover: none) {
     .content-menu ul li:not(.active):hover {
         background-color: inherit;
@@ -179,7 +187,7 @@ pre{
     }
 }
 .content-menu ul li a{
-    padding: 12px 13.25%;
+    padding: 0px 0%;
     color: #777A7A;
     letter-spacing: 0.025em;
     line-height: 1.1;
@@ -239,6 +247,9 @@ pre{
     max-width: 100%;
     display: block;
 }
+.content p  {
+    margin-bottom: 10px;
+}
 .content p .central-overflow-x {
     margin-right: 0;
     margin-left: 0;
@@ -265,6 +276,8 @@ pre{
 }
 .content h2{
     font-size: 1.333em;
+    text-transform: none;
+    margin-top: 0em;
 }
 .content h4{
     color: #00a8e3;
@@ -277,31 +290,15 @@ pre{
 .content-page .content pre {
     max-width: 680px;
 }
-.content pre,
-.content blockquote {
-    background-color: #323f4c;
-    border-color: #323f4c;
-    color: #fff;
-    padding: 0 28px 2em;
-    margin: 0;
-    width: 50%;
-    float: right;
-    clear: right;
-    box-sizing: border-box;
-}
+
 .content pre code, .content pre {
     font-size: 12px;
     line-height: 1.5;
+    background-color: #1E2D3C;
+    margin-left: 20px;
 }
-.content blockquote,
-.content pre,
-.content pre code{
-    padding-top: 0;
-    margin-top: 0;
-}
-.content pre code{
-    margin-top: -2em;
-}
+
+
 .content table {
     font-size: 0.825em;
     margin-bottom: 1.5em;
@@ -328,7 +325,9 @@ pre{
     font-weight: 300;
     color: #777A7A;
 }
-
+.content div.content-section {
+    margin-top: 3em;
+}
 
 /* burger-menu-icon
 ----------------------------------------------------------------------------------------*/
@@ -415,6 +414,10 @@ body.one-content-column-version .content h5,
 body.one-content-column-version .content h6 {
     color: #59C3C3;
 }
+body.one-content-column-version .content h1:first-child {
+    color: #F20049;
+}
+
 body.one-content-column-version p {
     color: #D6F0F0;
 }
@@ -439,16 +442,7 @@ body.one-content-column-version .content thead {
     .content-code{
         display: none;
     }
-    .content pre, .content blockquote {
-        margin: 20px 0;
-        padding: 28px;
-        display: block;
-        width: auto;
-        float: none;
-    }
-    .content pre code {
-        margin-top: 0;
-    }
+
 }
 
 @media only screen and (max-width:680px){
@@ -524,3 +518,7 @@ body.one-content-column-version .content thead {
 .cf:before, .cf:after { content: ""; display: block; }
 .cf:after { clear: both; }
 .ie6 .cf { zoom: 1 }
+
+
+/* Custom */
+
